vehicle/tests/golden/error/scoping/recordFieldExtra/spec.vcl
record Test where
  { f1 : Real
  }

example : Test
example = { f1 = 2, f2 = 2 }
